# BirdShop657

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  admin.py  apps.py  models.py  pyproject.toml  requirements.txt  setup.cfg  urls.py  views.py
birdshop657.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
migrations/: 0001_initial.py  0002_rename_file_productpage_productfile.py  0003_paymenthistory_sent_email.py  0004_stripesettings_from_email.py
static/css/birdshop657/: birdshop657.css
templates/: cancel.html  landing.html  success.html
templates/birdshop657/: product_page.html
