[metadata]
name = birdshop657
version = 0.1.0a
description = A small Wagtail shop app with Stripe integration.
long_description = file: README.md
url = https://github.com/oscfr657/BirdShop657
author = Oscar F
license = MIT
classifiers =
    Development Status :: 3 - Alpha,
    Environment :: Web Environment
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 6
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0
    wagtail >= 6.1.1
    wagtailmedia>=0.15.1
    stripe
